tests/ucc/type/good/if-vs-ptr.c
int main(void)
{
    int* a;

    if (a)
    {

    }

    return 0;
}
