tests/ucc/type/bad/return-float-vs-ptr.c
int f(int* a)
{
    return (int)a;
}

int main(void)
{
    float a;

    return f(a);
}
